# Design_Patterns

./: .gitignore
Lesson1/Task1/Project/SqlQueryBuilder/headers/: sql_query_builder.h
Lesson1/Task1/Project/SqlQueryBuilder/sources/: sql_query_builder.cpp
Lesson1/Task1/Project/sources/: main.cpp
Lesson1/Task2/Project/: CMakeLists.txt
Lesson1/Task2/Project/SqlQueryBuilder/: CMakeLists.txt
Lesson1/Task2/Project/SqlQueryBuilder/headers/: export_shared.h  sql_query_builder.h
Lesson1/Task2/Project/SqlQueryBuilder/sources/: sql_query_builder.cpp
Lesson1/Task2/Project/sources/: main.cpp
Lesson1/Task3/Project/: CMakeLists.txt
Lesson1/Task3/Project/SqlQueryBuilderInherit/: CMakeLists.txt
Lesson1/Task3/Project/SqlQueryBuilderInherit/headers/: export_shared.h  sql_query_builder.h
Lesson1/Task3/Project/SqlQueryBuilderInherit/sources/: sql_query_builder.cpp
Lesson1/Task3/Project/sources/: main.cpp
Lesson2/Task1/Project/: CMakeLists.txt
Lesson2/Task1/Project/Decorator/: CMakeLists.txt
Lesson2/Task1/Project/Decorator/headers/: decorator.h  export_static.h
Lesson2/Task1/Project/Decorator/sources/: decorator.cpp
Lesson2/Task1/Project/sources/: main.cpp
Lesson2/Task2/Project/: CMakeLists.txt
Lesson2/Task2/Project/VeryHeavyDB/: CMakeLists.txt
Lesson2/Task2/Project/VeryHeavyDB/headers/: export_static.h  veryheavydb.h
Lesson2/Task2/Project/VeryHeavyDB/sources/: veryheavydb.cpp
Lesson2/Task2/Project/sources/: main.cpp
Lesson3/Task1/Project/: CMakeLists.txt
Lesson3/Task1/Project/CommandPattern/: CMakeLists.txt
Lesson3/Task1/Project/CommandPattern/header/: command_pattern.h
Lesson3/Task1/Project/CommandPattern/source/: command_pattern.cpp
Lesson3/Task1/Project/source/: main.cpp
Lesson3/Task2/Project/: CMakeLists.txt  build_compile.bat
Lesson3/Task2/Project/Observer/: CMakeLists.txt
Lesson3/Task2/Project/Observer/header/: export.h  export_static.h  observer.h
Lesson3/Task2/Project/Observer/source/: observer.cpp
Lesson3/Task2/Project/source/: main.cpp
Lesson3/Task3/Project/: CMakeLists.txt  build.bat  compile.bat
Lesson3/Task3/Project/LogMessage/: CMakeLists.txt
Lesson3/Task3/Project/LogMessage/ErrorHandlers/: CMakeLists.txt
Lesson3/Task3/Project/LogMessage/ErrorHandlers/header/: error_handler.h  error_handler_export.h  export.h  export_shared.h
Lesson3/Task3/Project/LogMessage/ErrorHandlers/source/: error_handler.cpp
Lesson3/Task3/Project/LogMessage/header/: log_message.h  log_message_export.h
Lesson3/Task3/Project/LogMessage/source/: log_message.cpp
Lesson3/Task3/Project/source/: main.cpp
Lesson4/Task2/Project/: CMakeLists.txt  compile.bat
Lesson4/Task2/Project/PrintSave/: CMakeLists.txt
Lesson4/Task2/Project/PrintSave/source/: print_save.h
Lesson4/Task2/Project/source/: main.cpp
